[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "pydantic-i18n"
authors = [
    {name = "Roman Sadzhenytsia", email = "urchin.dukkee@gmail.com"},
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "pydantic >=1.9.0",
]
dynamic = ["version", "description"]

[tool.flit.module]
name = "pydantic_i18n"

[project.urls]
Documentation = "https://pydantic-i18n.boardpack.org"
Source = "https://github.com/boardpack/pydantic-i18n"

[project.optional-dependencies]
test = [
    "pydantic >=2",
    "pytest ==7.4.3",
    "pytest-cov ==4.1.0",
    "pytest-lazy-fixture ==0.6.3",
    "mypy ==1.8.0",
    "flake8 ==7.0.0",
    "black ==24.2.0",
    "isort ==5.13.2",
    "babel ==2.14.0",
]
dev = [
    "autoflake ==2.3.0",
    "flake8 ==7.0.0",
    "pre-commit",
]
doc = [
    "mkdocs ==1.5.3",
    "mkdocs-material ==9.5.11",
    "markdown ==3.5.2",
    "markdown-include ==0.8.1",
    "mkdocs-markdownextradata-plugin ==0.2.5",
    "typer ==0.9.0",
    "pyyaml ==5.3.1",
]

[tool.isort]
profile = "black"
known_first_party = ["pydantic_i18n", "pydantic", "babel"]
